@@ -8,22 +8,18 @@ import java.util.stream.Collectors;
 public class SumAdjacentEqualNumbers_01 {
     public static void main(String[] args) {
         Scanner scanner = new Scanner(System.in);
-        List<Double> numbers = new ArrayList<>(Arrays.stream(scanner.nextLine().split(" ")).map(Double::parseDouble).toList());
-        for (int i = 0; i < numbers.size()-1; i++) {
-            if (numbers.get(i).equals(numbers.get(i+1))){
-                numbers.set(i,(numbers.get(i)+numbers.get(i+1)));
-                numbers.remove(i+1);
+        List<Double> numbers = new ArrayList<>(Arrays.stream(scanner.nextLine().split(" ")).map(Double::parseDouble).collect(Collectors.toList()));
+        for (int i = 0; i <numbers.size()-1 ; i++) {
+            if (numbers.get(i).equals(numbers.get(i + 1))) {
+                numbers.set(i, numbers.get(i) * 2);
+                numbers.remove(numbers.get(i) / 2);
                 i = -1;
             }
+
         }
-        String output = joinElementsByDelimiter(numbers,"");
+        for (int i = 0; i <numbers.size() ; i++) {
+            System.out.print(new DecimalFormat("0.#").format(numbers.get(i))+" ");
+        }
 
-    }
-
-    private static String joinElementsByDelimiter(List<Double> items, String delimiter) {
-        String output = "";
-        for (Double item : items)
-            output +=(new DecimalFormat("0.#").format(item)+delimiter);
-        return output;
-    }
+        }
 }
